# slack-airtable-automation

./: app.py  notebook.ipynb  pyproject.toml
data/: task-data.csv
